nginx/ingress/single-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: beee-ingress
spec:
  backend:
    serviceName: beee-corphp
    servicePort: 80
